[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm[simple]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "streamlit-healthcheck"
dynamic = ["version"]
description = "Comprehensive health monitoring for Streamlit apps: system, dependencies, custom checks, and page errors."
authors = [
    { name = "Saradindu Sengupta", email = "saradindu.mi1@iiitmk.ac.in" }
]
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",

]
dependencies = [
    "streamlit",
    "psutil",
    "click",
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "joblib"
]
keywords = ["streamlit", "healthcheck", "system", "monitoring", "app", "dashboard"]

[project.urls]
Homepage = "https://github.com/saradindusengupta/streamlit-healthcheck"
Repository = "https://github.com/saradindusengupta/streamlit-healthcheck"
Documentation = "https://saradindusengupta.co.in/streamlit-healthcheck/streamlit_healthcheck.html"
Issues = "https://github.com/saradindusengupta/streamlit-healthcheck/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"
